force-app/main/default/objects/Order/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>XXXXTotal with Taxes</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>