force-app/main/default/objects/Order/fields/Autopick__c.field-meta.xml
<CustomField>
    <fullName>Autopick__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the order is picjked automatically in SAP</description>
    <inlineHelpText>Check this boix to select auto-pick.</inlineHelpText>
    <label>Autopick</label>
    <type>Checkbox</type>
</CustomField>