force-app/main/default/objects/Order/fields/BillTo__c.field-meta.xml
<CustomField>
    <fullName>BillTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account that will receive the invoice if it is different from the orde&apos;s account</description>
    <label>Bill To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>BillTo</relationshipName>
    <type>Lookup</type>
</CustomField>