force-app/main/default/objects/Order/fields/Client_Reference__c.field-meta.xml
<CustomField>
    <fullName>Client_Reference__c</fullName>
    <label>XXX Client Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>