force-app/main/default/objects/Order/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>XXX Company</label>
    <length>3</length>
    <type>Text</type>
</CustomField>