force-app/main/default/objects/Order/fields/Delivered__c.field-meta.xml
<CustomField>
    <fullName>Delivered__c</fullName>
    <description>Entregado</description>
    <label>Delivered</label>
    <type>Date</type>
</CustomField>