force-app/main/default/objects/Order/fields/DeliveryMethod__c.field-meta.xml
<CustomField>
    <fullName>DeliveryMethod__c</fullName>
    <description>E para entregas. R para recogida en tienda.</description>
    <label>DeliveryMethod</label>
    <length>1</length>
    <type>Text</type>
</CustomField>