force-app/main/default/objects/Order/fields/Distribution_channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_channel__c</fullName>
    <label>Distribution channel</label>
    <length>2</length>
    <type>Text</type>
</CustomField>