force-app/main/default/objects/Order/fields/Firm__c.field-meta.xml
<CustomField>
    <fullName>Firm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Firm</label>
    <type>Checkbox</type>
</CustomField>