force-app/main/default/objects/Order/fields/ID_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>ID_Salesforce__c</fullName>
    <label>NO USAR Y BORRAR ID Salesforce</label>
    <length>18</length>
    <type>Text</type>
</CustomField>