force-app/main/default/objects/Order/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <label>Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>