force-app/main/default/objects/Order/fields/IsCollection__c.field-meta.xml
<CustomField>
    <fullName>IsCollection__c</fullName>
    <description>The order is a collection</description>
    <formula>BEGINS( TEXT(Type) ,&apos;Z018&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Collection</label>
    <type>Checkbox</type>
</CustomField>