force-app/main/default/objects/Order/fields/LineNo__c.field-meta.xml
<CustomField>
    <fullName>LineNo__c</fullName>
    <label>LineNo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>