force-app/main/default/objects/Order/fields/NB2B_Credit__c.field-meta.xml
<CustomField>
    <fullName>NB2B_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NB2B_Credit</label>
    <type>Checkbox</type>
</CustomField>