force-app/main/default/objects/Order/fields/NB2B_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>NB2B_Delivery_Method__c</fullName>
    <inlineHelpText>Yo must select wharehouse address when you select pick up from Cliente or Comertial</inlineHelpText>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Customer Pick Up</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Sales Rep Pick Up</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Send to Customer</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Showroom Delivery</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>