force-app/main/default/objects/Order/fields/NB2B_DeliveryCode__c.field-meta.xml
<CustomField>
    <fullName>NB2B_DeliveryCode__c</fullName>
    <label>XXXX Delivery code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>