force-app/main/default/objects/Order/fields/NB2B_DeliveryStatus__c.field-meta.xml
<CustomField>
    <fullName>NB2B_DeliveryStatus__c</fullName>
    <label>Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Delivering</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Delivered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>