force-app/main/default/objects/Order/fields/NB2B_Division__c.field-meta.xml
<CustomField>
    <fullName>NB2B_Division__c</fullName>
    <label>NB2B_Division</label>
    <length>2</length>
    <type>Text</type>
</CustomField>