force-app/main/default/objects/Order/fields/NB2B_NetAmmount__c.field-meta.xml
<CustomField>
    <fullName>NB2B_NetAmmount__c</fullName>
    <label>Net Ammount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>