force-app/main/default/objects/Order/fields/NB2B_Oreder_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>NB2B_Oreder_Created_Date__c</fullName>
    <label>NB2B_Oreder Created Date</label>
    <type>Date</type>
</CustomField>