force-app/main/default/objects/Order/fields/NB2b_store_pickup__c.field-meta.xml
<CustomField>
    <fullName>NB2b_store_pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pickup</label>
    <type>Checkbox</type>
</CustomField>