force-app/main/default/objects/Order/fields/NBK_Sample__c.field-meta.xml
<CustomField>
    <fullName>NBK_Sample__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Muestra</label>
    <type>Checkbox</type>
</CustomField>