force-app/main/default/objects/Order/fields/NBK_Warehouse_Address__c.field-meta.xml
<CustomField>
    <fullName>NBK_Warehouse_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pick Up Address</label>
    <referenceTo>PorcelanosaAddress__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>