force-app/main/default/objects/Order/fields/Ordered__c.field-meta.xml
<CustomField>
    <fullName>Ordered__c</fullName>
    <description>Fecha del pedido</description>
    <label>XXXOrdered</label>
    <type>Date</type>
</CustomField>