force-app/main/default/objects/Order/fields/Ordernum__c.field-meta.xml
<CustomField>
    <fullName>Ordernum__c</fullName>
    <label>XXX Ordernum</label>
    <length>10</length>
    <type>Text</type>
</CustomField>