force-app/main/default/objects/Order/fields/OrderReason__c.field-meta.xml
<CustomField>
    <fullName>OrderReason__c</fullName>
    <label>Order Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E05_1</fullName>
                <label>Damaged Product</label>
            </value>
            <value>
                <fullName>E11</fullName>
                <label>Not Suitable</label>
            </value>
            <value>
                <fullName>E05</fullName>
                <label>Defective Product</label>
            </value>
            <value>
                <fullName>E07</fullName>
                <label>Sales Error</label>
            </value>
            <value>
                <fullName>E04</fullName>
                <label>Picking Error</label>
            </value>
            <value>
                <fullName>E07_1</fullName>
                <label>Admin Error</label>
            </value>
            <value>
                <fullName>E08</fullName>
                <label>Customer Error</label>
            </value>
            <value>
                <fullName>E08_1</fullName>
                <label>Surplus</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>