force-app/main/default/objects/Order/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>B2B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>