force-app/main/default/objects/Order/fields/PaymentModel__c.field-meta.xml
<CustomField>
    <fullName>PaymentModel__c</fullName>
    <description>Model of payment of the order</description>
    <label>Payment Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CREDIT</fullName>
            </value>
            <value>
                <fullName>PREPAID</fullName>
            </value>
            <value>
                <fullName>DEPOSIT</fullName>
            </value>
            <value>
                <fullName>NONE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>