force-app/main/default/objects/Order/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>