force-app/main/default/objects/Order/fields/ReferredInvoice__c.field-meta.xml
<CustomField>
    <fullName>ReferredInvoice__c</fullName>
    <description>Invoiuce referred by this order (returns, credits, etc)</description>
    <label>Referred Invoice</label>
    <length>10</length>
    <type>Text</type>
</CustomField>