force-app/main/default/objects/Order/fields/SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>SalesOffice__c</fullName>
    <label>SalesOffice</label>
    <length>4</length>
    <type>Text</type>
</CustomField>