force-app/main/default/objects/Order/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <label>SalesOrg</label>
    <length>4</length>
    <type>Text</type>
</CustomField>