force-app/main/default/objects/Order/fields/Sap_Id__c.field-meta.xml
<CustomField>
    <fullName>Sap_Id__c</fullName>
    <description>Sap code of the order is coming from</description>
    <label>Sap Id</label>
    <length>12</length>
    <type>Text</type>
</CustomField>