force-app/main/default/objects/Order/fields/SAPGoodsPosted__c.field-meta.xml
<CustomField>
    <fullName>SAPGoodsPosted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SAP Goods Posted</label>
    <type>Checkbox</type>
</CustomField>