force-app/main/default/objects/Order/fields/SAPRequestStatus__c.field-meta.xml
<CustomField>
    <fullName>SAPRequestStatus__c</fullName>
    <description>True when the order is ready to be sent to SAP</description>
    <label>SAP Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ready</fullName>
            </value>
            <value>
                <fullName>queued</fullName>
            </value>
            <value>
                <fullName>accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>