force-app/main/default/objects/Order/fields/StorePickup__c.field-meta.xml
<CustomField>
    <fullName>StorePickup__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box when the customer will collect the goods from the warehouse</inlineHelpText>
    <label>Store Pickup</label>
    <type>Checkbox</type>
</CustomField>