force-app/main/default/objects/Order/fields/TaxRate__c.field-meta.xml
<CustomField>
    <fullName>TaxRate__c</fullName>
    <label>TaxRate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>