force-app/main/default/objects/Order/fields/Total_Weight__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight__c</fullName>
    <label>Total Weight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>