force-app/main/default/objects/Order/fields/Typology__c.field-meta.xml
<CustomField>
    <fullName>Typology__c</fullName>
    <description>Additional info for the TYPOLOGY field in SAP (VBKD-KDKG1)</description>
    <label>Typology</label>
    <length>2</length>
    <type>Text</type>
</CustomField>