force-app/main/default/objects/Order/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V1</fullName>
                <default>true</default>
                <label>V1</label>
            </value>
            <value>
                <fullName>V2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>