force-app/main/default/objects/Order/fields/XXXDeliveryMethod__c.field-meta.xml
<CustomField>
    <fullName>XXXDeliveryMethod__c</fullName>
    <description>E para entregas. R para recogida en tienda.</description>
    <label>XXXDeliveryMethod</label>
    <length>1</length>
    <type>Text</type>
</CustomField>