force-app/main/default/objects/Order/recordTypes/CollectionOrder_V1.recordType-meta.xml
<RecordType>
    <fullName>CollectionOrder_V1</fullName>
    <active>true</active>
    <description>Customer returns order</description>
    <label>Collection Order V1</label>
</RecordType>