force-app/main/default/objects/Order/recordTypes/NBK_rt_B2B.recordType-meta.xml
<RecordType>
    <fullName>NBK_rt_B2B</fullName>
    <active>true</active>
    <label>B2B</label>
</RecordType>