force-app/main/default/objects/Order/recordTypes/NBK_rt_samples.recordType-meta.xml
<RecordType>
    <fullName>NBK_rt_samples</fullName>
    <active>true</active>
    <label>Samples</label>
</RecordType>