force-app/main/default/objects/Order/recordTypes/StandardOrder_V1.recordType-meta.xml
<RecordType>
    <fullName>StandardOrder_V1</fullName>
    <active>true</active>
    <description>Record Type form standard sales orders</description>
    <label>Standard Order V1</label>
</RecordType>