force-app/main/default/objects/Order/validationRules/REASON_required_in_collections.validationRule-meta.xml
<ValidationRule>
    <fullName>REASON_required_in_collections</fullName>
    <active>true</active>
    <description>Checks collections have identified the reason</description>
    <errorConditionFormula>IsCollection__c = true &amp;&amp; ISBLANK(TEXT(OrderReason__c))</errorConditionFormula>
    <errorMessage>An order reason is required for collections</errorMessage>
</ValidationRule>