force-app/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>SALES.ACCOUNT.OWNERALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>NB2B_DeliveryStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Orders</label>
</ListView>