force-app/main/default/objects/Order/listViews/B2B_portal_Activated_Orders.listView-meta.xml
<ListView>
    <fullName>B2B_portal_Activated_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>NB2B_OrderCode__c</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>Sap_Id__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Activated</value>
    </filters>
    <label>B2B portal - Activated Orders</label>
</ListView>